--- a/style.css
+++ b/style.css
@@ -48,15 +48,16 @@ nav{
     transform: translateY(-50%);
 }
 #circle{
-    width: 1000px;
-    height: 1000px;
+    width: 1050px;
+    height: 1050px;
     position: absolute;
     top: 0;
     left: 0;
     border-radius: 50%;
-    background: #ccc;
+    background: #ffffff;
     transform: rotate(0deg);
     transition: 900ms;
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, .5);
 }
 .feature img{
     width: 70px;
@@ -76,14 +77,17 @@ nav{
 .two{
     top: 150px;
     left: 350px;
+    transform: rotate(-90deg);
 }
 .three{
     bottom: 450px;
-    left: 50px;
+    left: 45px;
+    transform: rotate(-180deg);
 }
 .four{
     bottom: 150px;
-    right: 50%;
+    right: 38%;
+    transform: rotate(-270deg);
 }
 .controls{
     position: absolute;
@@ -113,5 +117,14 @@ nav{
 .mobile img{
     width: 50%;
     position: relative;
-    left: 400px;
+    left: 500px;
+}
+.overlay{
+    width: 0;
+    height: 0;
+    border: 500px solid white;
+    border-right: 600px solid transparent;
+    position: absolute;
+    left: 0;
+    right: 0;
 }
